# spark_calculator

./: 0_⚡️_Welcome_to_Sparkie.py  Procfile  README.md  assets.csv  example_sdai.csv  get_data.py  main.py  params.py  pot_dsr.csv  pyproject.toml  requirements.txt  sdai_calculator.ipynb  sdai_wallets.csv
.streamlit/: config.toml
pages/: 1_🏦_SparkLend.py  2_💸_sDAI.py
