[tool.poetry]
name = "spark-calculator"
version = "0.1.0"
description = ""
authors = ["tadeo <94108039+tadeongmi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
streamlit = "^1.29.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
